--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 52,
    "id": "4d64c8e6-2b08-4888-bd74-cc651eac4aa8",
    "metadata": {
     "tags": []
@@ -99,7 +99,27 @@
     "print(f\"Average Change: ${average}\")\n",
     "print(f'Greatest Increase in Profits: {max_month} ${max_gain}')\n",
     "print(f'Greatest Decrease in Profits: {min_month} ${max_loss}')\n",
-    "    "
+    "\n",
+    "\n",
+    "# Set output file name\n",
+    "output_path = 'homework1.txt'\n",
+    "\n",
+    "# Open the output path as a file object\n",
+    "with open(output_path, 'w') as file:\n",
+    "    file.write(\"\")\n",
+    "    file.write(\"------------------\")\n",
+    "    file.write(\"Financial Analysis\")\n",
+    "    file.write(\"------------------\")\n",
+    "    file.write(\"\")\n",
+    "    file.write(f\"Total Months: {Total_Months}\") \n",
+    "    file.write(\"|\")\n",
+    "    file.write(f\"Net Profit: ${net_profit} \")\n",
+    "    file.write(\"|\")\n",
+    "    file.write(f\"Average Change: ${average}\")\n",
+    "    file.write(\"|\")\n",
+    "    file.write(f'Greatest Increase in Profits: {max_month} ${max_gain}')\n",
+    "    file.write(\"|\")\n",
+    "    file.write(f'Greatest Decrease in Profits: {min_month} ${max_loss}')"
    ]
   },
   {
